scaffold fees page
