# ClubEngine.Web/src/app/api/api.ts
@@ -427,6 +427,57 @@ export class Api {
         return _observableOf(null as any);
     }
 
+    membershipFees_Query(membershipFeesQuery: MembershipFeesQuery | undefined): Observable<MembershipFeesList> {
+        let url_ = this.baseUrl + "/api/MembershipFeesQuery";
+        url_ = url_.replace(/[?&]$/, "");
+
+        const content_ = JSON.stringify(membershipFeesQuery);
+
+        let options_ : any = {
+            body: content_,
+            observe: "response",
+            responseType: "blob",
+            headers: new HttpHeaders({
+                "Content-Type": "application/json",
+                "Accept": "application/json"
+            })
+        };
+
+        return this.http.request("post", url_, options_).pipe(_observableMergeMap((response_ : any) => {
+            return this.processMembershipFees_Query(response_);
+        })).pipe(_observableCatch((response_: any) => {
+            if (response_ instanceof HttpResponseBase) {
+                try {
+                    return this.processMembershipFees_Query(response_ as any);
+                } catch (e) {
+                    return _observableThrow(e) as any as Observable<MembershipFeesList>;
+                }
+            } else
+                return _observableThrow(response_) as any as Observable<MembershipFeesList>;
+        }));
+    }
+
+    protected processMembershipFees_Query(response: HttpResponseBase): Observable<MembershipFeesList> {
+        const status = response.status;
+        const responseBlob =
+            response instanceof HttpResponse ? response.body :
+            (response as any).error instanceof Blob ? (response as any).error : undefined;
+
+        let _headers: any = {}; if (response.headers) { for (let key of response.headers.keys()) { _headers[key] = response.headers.get(key); }}
+        if (status === 200) {
+            return blobToText(responseBlob).pipe(_observableMergeMap((_responseText: string) => {
+            let result200: any = null;
+            result200 = _responseText === "" ? null : JSON.parse(_responseText, this.jsonParseReviver) as MembershipFeesList;
+            return _observableOf(result200);
+            }));
+        } else if (status !== 200 && status !== 204) {
+            return blobToText(responseBlob).pipe(_observableMergeMap((_responseText: string) => {
+            return throwException("An unexpected server error occurred.", status, _responseText, _headers);
+            }));
+        }
+        return _observableOf(null as any);
+    }
+
     membershipTypes_Query(membershipTypesQuery: MembershipTypesQuery | undefined): Observable<MembershipTypeItem[]> {
         let url_ = this.baseUrl + "/api/MembershipTypesQuery";
         url_ = url_.replace(/[?&]$/, "");
@@ -1834,6 +1885,23 @@ export interface MapSlackUserCommand {
     partitionId?: string;
     slackUserId?: string;
     memberId?: string;
+}
+
+export interface MembershipFeesList {
+    paid?: FeeStateInPeriod[];
+    due?: FeeStateInPeriod[];
+}
+
+export interface FeeStateInPeriod {
+    memberId?: string;
+    memberName?: string;
+    amountExpected?: number;
+    amountPaid?: number;
+}
+
+export interface MembershipFeesQuery {
+    periodId?: string | null;
+    partitionId?: string;
 }
 
 export interface MembershipTypeItem {
